add missing class tags

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -8,70 +8,84 @@ lessons:
 
   - title: "Version Control & Reproducible Research"
     date: "Week 2"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Exploratory data analysis"
     date: "Week 3"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Data visualization"
     date: "Week 4"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Advanced R functions, control structures"
     date: "Week 5"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Data cleaning and wrangling big data"
     date: "Week 6"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Data scraping using APIs, data security"
     date: "Week 7"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Text mining and Regular Expressions"
     date: "Week 8"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Midterm Exam"
     date: "Week 9"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "High performance computing, cloud computing"
     date: "Week 10"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
     date: "Week 11"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Interactive visualization and data communication I"
     date: "Week 12"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Interactive visualization and data communication II"
     date: "Week 13"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Final project workshop: review project progress, preliminary presentations"
     date: "Week 14"
+    class: ""
     reading: ""
     assignment: ""
 
   - title: "Communicating to stakeholders and end users"
     date: "Week 15"
+    class: ""
     reading: ""
     assignment: ""
