Adding readings for HPC week (need to add more)

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseurl: https://elastic-khorana-70231e.netlify.com
 defaultContentLanguage: en
-title: "Course Title"
+title: "Introduction to Health Data Science - PM 566"
 theme: hugo-academic
 
 
