--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -7,6 +7,7 @@ lessons:
 
   - title: "Version Control & Reproducible Research"
     date: "Week 2"
+    class: "02-class"
     reading: ""
     assignment: ""
 
@@ -47,6 +48,7 @@ lessons:
 
   - title: "High performance computing, cloud computing"
     date: "Week 10"
+    class: "10-class"
     reading: ""
     assignment: ""
 
