--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -1,76 +1,71 @@
 lessons:
 
-  - title: " Introduction to Data Science tools: R, R Markdown"
+  - title: "Introduction to Data Science tools: R, Python, Markdown, Git, command line tools"
     date: "Week 1"
     class: "01-class"
     assignment: "01-code"
 
   - title: "Version Control & Reproducible Research"
     date: "Week 2"
-    reading: ""
+    class: ""
     assignment: ""
 
   - title: "Exploratory data analysis"
     date: "Week 3"
-    reading: ""
+    class: ""
     assignment: ""
 
   - title: "Data visualization"
     date: "Week 4"
-    reading: ""
+    class: ""
     assignment: ""
 
-  - title: "Advanced R functions, control structures"
+  - title: "Data cleaning and wrangling"
     date: "Week 5"
-    reading: ""
-    assignment: ""
-
-  - title: "Data cleaning and wrangling big data"
-    date: "Week 6"
-    reading: ""
+    class: ""
     assignment: ""
 
   - title: "Regular Expressions, Big Data, Data scraping using APIs, data security"
-    date: "Week 7"
-    reading: ""
+    date: "Week 6"
+    class: ""
     assignment: ""
 
-  - title: "Regular Expressions, Big Data, Data scraping, using APIs, text mining"
-    date: "Week 8"
-    reading: ""
+  - title: "Regular Expressions, Big Data, Data scraping using APIs, text mining"
+    date: "Week 7"
+    class: "07-class"
     assignment: ""
 
   - title: "Midterm Exam"
-    date: "Week 9"
-    reading: ""
+    date: "Week 8"
+    class: ""
     assignment: ""
 
   - title: "High performance computing, cloud computing"
-    date: "Week 10"
-    reading: ""
+    date: "Week 9"
+    class: ""
     assignment: ""
 
   - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
+    date: "Week 10"
+    class: ""
+    assignment: ""
+
+  - title: "Interactive visualization and effective data communication I"
     date: "Week 11"
-    reading: ""
-    assignment: ""
-
-  - title: "Interactive visualization and data communication I"
-    date: "Week 12"
-    reading: ""
-    assignment: ""
-
-  - title: "Interactive visualization and data communication II"
-    date: "Week 13"
-    reading: ""
+    class: ""
     assignment: ""
 
   - title: "Final project workshop: review project progress, preliminary presentations"
-    date: "Week 14"
-    reading: ""
+    date: "Week 12"
+    class: ""
     assignment: ""
 
-  - title: "Communicating to stakeholders and end users"
-    date: "Week 15"
-    reading: ""
+  - title: "Interactive visualization and effective data communication II"
+    date: "Week 13"
+    class: ""
+    assignment: ""
+
+  - title: "Final Project"
+    date: "Week 14"
+    class: ""
     assignment: ""
