--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -30,13 +30,13 @@ lessons:
     reading: ""
     assignment: ""
 
-  - title: "Regular Expressions, Big Data, Data scraping using APIs, data security"
+  - title: "Regular Expressions, Big Data, Data scraping and using APIs, data security"
     date: "Week 6"
     class: ""
     reading: ""
     assignment: ""
 
-  - title: "Regular Expressions, Big Data, Data scraping using APIs, text mining"
+  - title: "Regular Expressions, Big Data, Data scraping and using APIs, text mining"
     date: "Week 7"
     class: "07-class"
     reading: "07-reading"
