--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -43,7 +43,8 @@ lessons:
 
   - title: "High performance computing, cloud computing"
     date: "Week 9"
-    class: ""
+    class: "09-class"
+    reading: 
     assignment: ""
 
   - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
