update reading for week 11

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -63,7 +63,7 @@ lessons:
   - title: "Interactive visualization and effective data communication I"
     date: "Week 11"
     class: ""
-    reading: ""
+    reading: "11-reading"
     assignment: ""
 
   - title: "Final project workshop: review project progress, preliminary presentations"
