--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -15,13 +15,13 @@ lessons:
   - title: "Exploratory data analysis"
     date: "Week 3"
     class: ""
-    reading: ""
+    reading: "03-reading"
     assignment: ""
 
   - title: "Data visualization"
     date: "Week 4"
     class: ""
-    reading: ""
+    reading: "04-reading"
     assignment: ""
 
   - title: "Data cleaning and wrangling"
@@ -33,7 +33,7 @@ lessons:
   - title: "Regular Expressions, Big Data, Data scraping and using APIs, data security"
     date: "Week 6"
     class: ""
-    reading: ""
+    reading: "06-reading"
     assignment: ""
 
   - title: "Regular Expressions, Big Data, Data scraping and using APIs, text mining"
@@ -45,7 +45,7 @@ lessons:
   - title: "Midterm Exam"
     date: "Week 8"
     class: ""
-    reading: ""
+    reading: "08-reading"
     assignment: ""
 
   - title: "High performance computing, cloud computing"
@@ -69,17 +69,17 @@ lessons:
   - title: "Final project workshop: review project progress, preliminary presentations"
     date: "Week 12"
     class: ""
-    reading: ""
+    reading: "12-reading"
     assignment: ""
 
   - title: "Interactive visualization and effective data communication II"
     date: "Week 13"
     class: ""
-    reading: ""
+    reading: "13-reading"
     assignment: ""
 
   - title: "Final Project"
     date: "Week 14"
     class: ""
-    reading: ""
+    reading: "14-reading"
     assignment: ""
