--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -16,7 +16,7 @@ lessons:
     date: "Week 3"
     class: "03-class"
     reading: "03-reading"
-    assignment: ""
+    assignment: "03-hw1"
 
   - title: "Data visualization"
     date: "Week 4"
