--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -28,7 +28,7 @@ lessons:
     date: "Week 5"
     class: ""
     reading: ""
-    assignment: ""
+    assignment: "05-hw2"
 
   - title: "Regular Expressions, Big Data, Data scraping and using APIs, data security"
     date: "Week 6"
