--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -36,7 +36,7 @@ lessons:
     reading: "06-reading"
     assignment: ""
 
-  - title: "Version Control and Github"
+  - title: "Scraping and API"
     date: "Week 7"
     class: "07-class"
     reading: "07-reading"
