--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -1,85 +1,85 @@
 lessons:
 
   - title: "Introduction to Data Science tools: R, Python, Markdown, Git, command line tools"
-    date: "Week 1"
+    date: "Week 1 (8/19)"
     class: "01-class"
     reading: "01-reading"
     assignment: ""
 
   - title: "Version Control & Reproducible Research"
-    date: "Week 2"
+    date: "Week 2 (8/26)"
     class: "02-class"
     reading: "02-reading"
     assignment: ""
 
   - title: "Exploratory data analysis"
-    date: "Week 3"
+    date: "Week 3 (9/2)"
     class: "03-class"
     reading: "03-reading"
     assignment: "03-hw1"
 
   - title: "Data visualization"
-    date: "Week 4"
+    date: "Week 4 (9/9)"
     class: "04-class"
     reading: "04-reading"
     assignment: ""
 
   - title: "Data cleaning and wrangling"
-    date: "Week 5"
+    date: "Week 5 (9/16)"
     class: "05-class"
     reading: "05-reading"
     assignment: "05-hw2"
 
   - title: "Text Mining"
-    date: "Week 6"
+    date: "Week 6 (9/23)"
     class: "06-class"
     reading: "06-reading"
     assignment: ""
 
   - title: "Scraping and API"
-    date: "Week 7"
+    date: "Week 7 (9/30)"
     class: "07-class"
     reading: "07-reading"
     assignment: ""
 
-  - title: "Midterm Exam"
-    date: "Week 8"
+  - title: "Midterm Exam (No class)"
+    date: "Week 8 (10/7)"
     class: "08-class"
     reading: "08-reading"
     assignment: ""
 
   - title: "High performance computing, cloud computing"
-    date: "Week 9"
+    date: "Week 9 (10/14)"
     class: "09-class"
     reading: "09-reading"
     assignment: ""
 
   - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
-    date: "Week 10"
-    class: ""
-    reading: ""
+    date: "Week 10 (10/21)"
+    class: "10-class"
+    reading: "10-reading"
     assignment: ""
 
   - title: "Interactive visualization and effective data communication I"
-    date: "Week 11"
+    date: "Week 11 (10/28)"
     class: "11-class"
     reading: "11-reading"
     assignment: ""
 
   - title: "Final project workshop: review project progress, preliminary presentations"
-    date: "Week 12"
+    date: "Week 12 (11/4)"
     class: "12-class"
     reading: "12-reading"
     assignment: ""
 
   - title: "Interactive visualization and effective data communication II"
-    date: "Week 13"
+    date: "Week 13 (11/11)"
     class: "12-class"
     reading: "13-reading"
     assignment: ""
 
   - title: "Final Project"
-    date: "Week 14"
+    date: "Week 14 (11/18)"
     class: "14-class"
     reading: "14-reading"
     assignment: ""
