Adding lectures for session 7

--- a/data/lessons.yml
+++ b/data/lessons.yml
@@ -31,12 +31,12 @@ lessons:
     class: ""
     assignment: ""
 
-  - title: "Version Control and Github"
+  - title: "Scraping, APIs, and Regular Expressions"
     date: "Week 7"
     class: "07-class"
     assignment: ""
 
-  - title: "Midterm Exam"
+  - title: "Midterm Exam (no class)"
     date: "Week 8"
     class: ""
     assignment: ""
