add 3rd assignment

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -40,7 +40,7 @@ lessons:
     date: "Week 7 (9/30)"
     class: "07-class"
     reading: "07-reading"
-    assignment: ""
+    assignment: "07-hw3"
 
   - title: "Midterm Exam (No class)"
     date: "Week 8 (10/7)"
