Adding week 11 hw4

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -64,7 +64,7 @@ lessons:
     date: "Week 11 (10/28)"
     class: "11-class"
     reading: "11-reading"
-    assignment: ""
+    assignment: "11-hw4"
 
   - title: "Final project workshop: review project progress, preliminary presentations"
     date: "Week 12 (11/4)"
