--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -76,7 +76,7 @@ lessons:
     date: "Week 13 (11/11)"
     class: "12-class"
     reading: "13-reading"
-    assignment: ""
+    assignment: "13-hw5"
 
   - title: "Final Project"
     date: "Week 14 (11/18)"
