Adding week 12 links and others

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -72,7 +72,7 @@ lessons:
     reading: "12-reading"
     assignment: "11-hw4"
 
-  - title: "Final project workshop: review project progress, preliminary presentations"
+  - title: "Invited speakers and review presentations"
     date: "Week 13 (11/11)"
     class: "13-class"
     reading: "13-reading"
