Adding final details

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -82,4 +82,4 @@ lessons:
     date: "Week 14 (11/18)"
     class: "14-class"
     reading: "14-reading"
-    assignment: ""
+    assignment: "14-final"
