--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -89,13 +89,14 @@ edit_page:
 ## Additionally, for organizations, these details may be used to enrich search engine results.
 ############################
 
-author: Meredith Franklin, George Vega-Yon, Emil Hvitfeldt
+author: Meredith Franklin, George Vega Yon, Emil Hvitfeldt, Abigail Horn
 
 instructor:
   name: >-
     Meredith Franklin,
-    George Vega-Yon,
-    Emil Hvitfeldt
+    George Vega Yon,
+    Emil Hvitfeldt,
+    Abigail Horn
   email: meredith.franklin@usc.edu
   office: "SSB 202A"
   contact_policy: >-
