--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM rocker/tidyverse:latest
 
-RUN Rscript -e 'utils::install.packages("blogdown")'
+RUN Rscript -e 'utils::install.packages("blogdown");blogdown::install_hugo()'
 
 CMD ["bash"]
 
