--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: Submodule
         run: |
+                cd website
                 git submodule init
                 git submodule update
 
