Disabling GitHub info

--- a/website/config.yaml
+++ b/website/config.yaml
@@ -32,7 +32,7 @@ imaging:
 
 
 copyright: ''
-enableGitInfo: true
+enableGitInfo: false
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
