--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Building website
         run: |
                 cd website
-                docker run --rm -i -v ${PWD}:/home/mnt -w /home/mnt ${cntr} Rscript -e 'blogdown::hugo_build()'
+                docker run --rm -i -v ${PWD}:/home/mnt \
+                        -w /home/mnt ${cntr} \
+                        Rscript -e 'library(blogdown);build_site(build_rmd=filter_timestamp(list.files("content/class/", pattern = "*Rmd", full.names=TRUE)))'
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
