--- a/website/config.yaml
+++ b/website/config.yaml
@@ -1,4 +1,5 @@
 baseurl: https://uscbiostats.github.io/PM566/
+relativeurl: PM566
 defaultContentLanguage: en
 title: "Introduction to Health Data Science - PM 566"
 theme: hugo-academic
