--- a/website/data/schedule.yaml
+++ b/website/data/schedule.yaml
@@ -1,85 +1,98 @@
 lessons:
 
   - title: "Introduction to Data Science tools: R, Python, Markdown, Git, command line tools"
-    date: "Week 1 (8/19)"
+    date: "Week 1 (8/27)"
     class: "01-class"
     reading: "01-reading"
     assignment: ""
 
   - title: "Version Control & Reproducible Research"
-    date: "Week 2 (8/26)"
+    date: "Week 2 (9/3)"
     class: "02-class"
     reading: "02-reading"
     assignment: ""
 
   - title: "Exploratory data analysis"
-    date: "Week 3 (9/2)"
+    date: "Week 3 (9/10)"
     class: "03-class"
     reading: "03-reading"
     assignment: ""
 
   - title: "Data visualization"
-    date: "Week 4 (9/9)"
+    date: "Week 4 (9/17)"
     class: "04-class"
     reading: "04-reading"
     assignment: "03-hw1"
 
   - title: "Data cleaning and wrangling"
-    date: "Week 5 (9/16)"
+    date: "Week 5 (9/24)"
     class: "05-class"
     reading: "05-reading"
     assignment: ""
 
   - title: "Text Mining"
-    date: "Week 6 (9/23)"
+    date: "Week 6 (10/1)"
     class: "06-class"
     reading: "06-reading"
     assignment: "05-hw2"
 
   - title: "Scraping, APIs, and Regular Expressions"
-    date: "Week 7 (9/30)"
+    date: "Week 7 (10/8)"
     class: "07-class"
     reading: "07-reading"
     assignment: ""
 
-  - title: "Midterm Exam (No class)"
-    date: "Week 8 (10/7)"
+  - title: "Fall Recess (No class)"
+    date: "Week 8 (10/15)"
+    class: ""
+    reading: ""
+    assignment: # "08-midterm"
+
+  - title: "Midterm Exam"
+    date: "Week 9 (10/22)"
     class: ""
     reading: ""
     assignment: "08-midterm"
 
   - title: "High performance computing, cloud computing"
-    date: "Week 9 (10/14)"
+    date: "Week 10 (10/29)"
     class: "09-class"
     reading: "09-reading"
     assignment: "09-hw3"
 
   - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
-    date: "Week 10 (10/21)"
+    date: "Week 11 (11/5)"
     class: "10-class"
     reading: "10-reading"
     assignment: ""
 
   - title: "Interactive visualization and effective data communication I"
-    date: "Week 11 (10/28)"
+    date: "Week 12 (11/12)"
     class: "11-class"
     reading: "11-reading"
     assignment: ""
 
   - title: "Interactive visualization and effective data communication II"
-    date: "Week 12 (11/4)"
+    date: "Week 13 (11/19)"
     class: "12-class"
     reading: "12-reading"
     assignment: "11-hw4"
 
+  - title: "Thanksgiving Holiday"
+    date: "Week 14 (11/26)"
+    class: ""
+    reading: ""
+    assignment: ""
+
   - title: "Final project workshop: review project progress, preliminary presentations"
-    date: "Week 13 (11/11)"
+    date: "Week 15 (12/3)"
     class: "13-class"
     reading: "13-reading"
     assignment: "13-hw5"
 
   - title: "Final Project"
-    date: "Week 14 (11/18)"
+    date: "Week 16 (12/10)"
     class: "14-class"
     reading: "14-reading"
     assignment: "14-final"
+
