--- a/website/Makefile
+++ b/website/Makefile
@@ -1,8 +1,8 @@
 cntr:=uscbiostats/pm566:latest
 update:
-	Rscript -e 'library(blogdown);build_site(build_rmd = filter_timestamp)'
-docker:
 	docker run --rm -i -v ${PWD}:/home/mnt \
 		-w /home/mnt ${cntr} \
 		Rscript -e 'library(blogdown);build_site(build_rmd=filter_timestamp(list.files("content/class/", pattern = "*Rmd", full.names=TRUE)))'
-
+run:
+	docker run --rm -i -v ${PWD}:/home/mnt \
+		-w /home/mnt ${cntr} R --vanilla
