Extending list for site building

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -26,7 +26,7 @@ jobs:
                 cd website
                 docker run --rm -i -v ${PWD}:/home/mnt \
                         -w /home/mnt ${cntr} \
-                        Rscript -e 'library(blogdown);build_site(build_rmd=filter_timestamp(list.files("content/class/", pattern = "*Rmd", full.names=TRUE)))'
+                        Rscript --vanilla build.R
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
