--- a/website/config/_default/params.yaml
+++ b/website/config/_default/params.yaml
@@ -97,7 +97,7 @@ instructor:
     Kim Siegmund,
     Abigail Horn
   email: vegayon@usc.edu
-  office: ""
+  office: "<a href=\"https://web-app.usc.edu/maps/hscmap.pdf\" target=\"_blank\">Hastings Auditorium (HSC)</a>"
   contact_policy: >-
     By Appointment
 
