--- a/website/data/lessons.yml
+++ b/website/data/lessons.yml
@@ -1,74 +1,1 @@
-lessons:
-
-  - title: "Introduction to Data Science tools: R, Python, Markdown, Git, command line tools"
-    date: "Week 1"
-    class: "01-class"
-    assignment: "01-code"
-
-  - title: "Version Control & Reproducible Research"
-    date: "Week 2"
-    class: "02-class"
-    reading: ""
-    assignment: ""
-
-  - title: "Exploratory data analysis"
-    date: "Week 3"
-    class: ""
-    assignment: ""
-
-  - title: "Data visualization"
-    date: "Week 4"
-    class: ""
-    assignment: ""
-
-  - title: "Data cleaning and wrangling"
-    date: "Week 5"
-    class: ""
-    assignment: ""
-
-  - title: "Text Mining"
-    date: "Week 6"
-    class: ""
-    assignment: ""
-
-  - title: "Scraping, APIs, and Regular Expressions"
-    date: "Week 7"
-    class: "07-class"
-    assignment: ""
-
-  - title: "Midterm Exam (no class)"
-    date: "Week 8"
-    class: ""
-    assignment: ""
-
-  - title: "High performance computing, cloud computing"
-    date: "Week 9"
-    class: "09-class"
-    reading: 
-    assignment: ""
-
-  - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
-    date: "Week 10"
-    class: "10-class"
-    reading: ""
-    assignment: ""
-
-  - title: "Interactive visualization and effective data communication I"
-    date: "Week 11"
-    class: ""
-    assignment: ""
-
-  - title: "Final project workshop: review project progress, preliminary presentations"
-    date: "Week 12"
-    class: ""
-    assignment: ""
-
-  - title: "Interactive visualization and effective data communication II"
-    date: "Week 13"
-    class: ""
-    assignment: ""
-
-  - title: "Final Project"
-    date: "Week 14"
-    class: ""
-    assignment: ""
+schedule.yaml
