--- a/website/config/_default/params.yaml
+++ b/website/config/_default/params.yaml
@@ -89,27 +89,25 @@ edit_page:
 ## Additionally, for organizations, these details may be used to enrich search engine results.
 ############################
 
-author: George G. Vega Yon, Kim Siegmund, Abigail Horn
+author: Kim Siegmund
 
 instructor:
   name: >-
-    George Vega Yon,
-    Kim Siegmund,
-    Abigail Horn
-  email: vegayon@usc.edu
-  office: "Hastings Auditorium (HSC)"
+    Kim Siegmund
+  email: kims@usc.edu
+  office: "Soto Street Building (SSB)"
   contact_policy: >-
     By Appointment
 
 course:
   number: "PM566"
-  semester: "Fall 2021"
+  semester: "Fall 2022"
   days: ""
   time: ""
-  location: "Hastings Auditorium (HSC)"
+  location: "Soto Street Building (SSB)"
   dates: ""
   github: "USCbiostats/PM566"
-  copyrightYear: "2021"
+  copyrightYear: "2022"
 
 university:
   name: University of Southern California
