--- a/website/data/schedule.yaml
+++ b/website/data/schedule.yaml
@@ -1,97 +1,97 @@
 lessons:
 
   - title: "Introduction to Data Science tools: R, Python, Markdown, Git, command line tools"
-    date: "Week 1 (8/24)"
+    date: "Week 1 (8/25)"
     class: "01-class"
     reading: "01-reading"
     assignment: ""
 
   - title: "Version Control & Reproducible Research"
-    date: "Week 2 (8/31)"
+    date: "Week 2 (9/1)"
     class: "02-class"
     reading: "02-reading"
     assignment: ""
 
   - title: "Exploratory data analysis"
-    date: "Week 3 (9/7)"
+    date: "Week 3 (9/8)"
     class: "03-class"
     reading: "03-reading"
     assignment: ""
 
   - title: "Data visualization"
-    date: "Week 4 (9/14)"
+    date: "Week 4 (9/15)"
     class: "04-class"
     reading: "04-reading"
     assignment: ""
 
   - title: "Data cleaning and wrangling"
-    date: "Week 5 (9/21)"
+    date: "Week 5 (9/22)"
     class: "05-class"
     reading: "05-reading"
     assignment: "03-hw1"
 
   - title: "Text Mining"
-    date: "Week 6 (9/28)"
+    date: "Week 6 (9/29)"
     class: "06-class"
     reading: "06-reading"
     assignment: ""
 
   - title: "Scraping, APIs, and Regular Expressions"
-    date: "Week 7 (10/5)"
+    date: "Week 7 (10/6)"
     class: "07-class"
     reading: "07-reading"
     assignment: "05-hw2"
 
-  - title: "Fall Recess (No class)"
-    date: "Week 8 (10/12)"
-    class: ""
-    reading: ""
-    assignment: ""
-
-  - title: "Midterm Exam"
-    date: "Week 9 (10/19)"
+  - title: "Fall Recess (No class). Midterm Exam"
+    date: "Week 8 (10/13)"
     class: ""
     reading: ""
     assignment: "08-midterm"
 
-  - title: "High performance computing, cloud computing"
-    date: "Week 10 (10/26)"
+  - title: "(Midterm Exam due) High performance computing, cloud computing"
+    date: "Week 9 (10/20)"
     class: "09-class"
     reading: "09-reading"
     assignment: ""
 
   - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
-    date: "Week 11 (11/2)"
+    date: "Week 10 (10/27)"
     class: "10-class"
     reading: "10-reading"
     assignment: "09-hw3"
 
   - title: "Interactive visualization and effective data communication I"
-    date: "Week 12 (11/9)"
+    date: "Week 11 (11/3)"
     class: "11-class"
     reading: "11-reading"
     assignment: ""
 
+  - title: "Veterans Day (No class)"
+    date: "Week 12 (11/10)"
+    class: ""
+    reading: ""
+    assignment: ""
+
   - title: "Interactive visualization and effective data communication II"
-    date: "Week 13 (11/16)"
+    date: "Week 13 (11/17)"
     class: "12-class"
     reading: "12-reading"
     assignment: "11-hw4"
 
   - title: "Thanksgiving Holiday"
-    date: "Week 14 (11/23)"
+    date: "Week 14 (11/24)"
     class: ""
     reading: ""
     assignment: ""
 
   - title: "Final project workshop: review project progress, preliminary presentations"
-    date: "Week 15 (11/30)"
+    date: "Week 15 (12/1)"
     class: "13-class"
     reading: "13-reading"
     assignment: "13-hw5"
 
   - title: "Final Project"
-    date: "Week 16 (12/7)"
+    date: "Week 16 (12/8)"
     class: "14-class"
     reading: "14-reading"
     assignment: "14-final"
