--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -33,4 +33,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./website/public
+          allow_empty_commit: true
 
