removed hw5 (redundant with requirements for the final)

--- a/website/data/schedule.yaml
+++ b/website/data/schedule.yaml
@@ -82,9 +82,9 @@ lessons:
     date: "Week 14 (11/24)"
     class: ""
     reading: ""
-    assignment: "13-hw5"
+    assignment: ""
 
-  - title: "Final project workshop: review project progress, preliminary presentations"
+  - title: "Final project workshop: review progress"
     date: "Week 15 (12/1)"
     class: "13-class"
     reading: "13-reading"
