--- a/website/data/schedule.yaml
+++ b/website/data/schedule.yaml
@@ -1,98 +1,92 @@
 lessons:
 
-  - title: "Introduction to Data Science tools: R, Python, Markdown, Git, command line tools"
-    date: "Week 1 (8/25)"
+  - title: "Introduction to Data Science tools: R, Python, Quarto, Git, command line tools"
+    date: "Week 1 (8/30)"
     class: "01-class"
     reading: "01-reading"
     assignment: ""
 
-  - title: "Version Control & Reproducible Research"
-    date: "Week 2 (9/1)"
+  - title: "GitHub, Version Control, & Reproducible Research"
+    date: "Week 2 (9/6)"
     class: "02-class"
     reading: "02-reading"
     assignment: ""
 
-  - title: "Exploratory data analysis"
-    date: "Week 3 (9/8)"
+  - title: "Exploratory Data Analysis"
+    date: "Week 3 (9/13)"
     class: "03-class"
     reading: "03-reading"
-    assignment: ""
-
-  - title: "Data visualization"
-    date: "Week 4 (9/15)"
-    class: "04-class"
-    reading: "04-reading"
     assignment: "03-hw1"
 
-  - title: "Data cleaning and wrangling"
-    date: "Week 5 (9/22)"
+  - title: "Data Visualization"
+    date: "Week 4 (9/20)"
+    class: "04-class"
+    reading: "04-reading"
+    assignment: ""
+
+  - title: "Data Cleaning and Wrangling"
+    date: "Week 5 (9/27)"
     class: "05-class"
     reading: "05-reading"
-    assignment: ""
-
-  - title: "Text Mining"
-    date: "Week 6 (9/29)"
-    class: "06-class"
-    reading: "06-reading"
     assignment: "05-hw2"
 
-  - title: "Scraping, APIs, and Regular Expressions"
-    date: "Week 7 (10/6)"
-    class: "07-class"
-    reading: "07-reading"
+  - title: "Text Mining & Sentiment Analysis"
+    date: "Week 6 (10/4)"
+    class: "06-class"
+    reading: "06-reading"
     assignment: ""
 
-  - title: "Fall Recess (No class). Midterm Exam"
-    date: "Week 8 (10/13)"
+  - title: "NO CLASS - Fall Recess. Midterm Project"
+    date: "Week 7 (10/11)"
     class: ""
     reading: ""
     assignment: "08-midterm"
 
-  - title: "(Midterm Exam due) High performance computing, cloud computing"
-    date: "Week 9 (10/20)"
+  - title: "Scraping, APIs, and Regular Expressions"
+    date: "Week 8 (10/18)"
+    class: "07-class"
+    reading: "07-reading"
+    assignment: ""
+
+  - title: "(Midterm Project due) High Performance Computing, Cloud Computing"
+    date: "Week 9 (10/25)"
     class: "09-class"
     reading: "09-reading"
-    assignment: ""
-
-  - title: "Managing big data, SQL and non-SQL languages, Google BigQuery"
-    date: "Week 10 (10/27)"
-    class: "10-class"
-    reading: "10-reading"
     assignment: "09-hw3"
 
-  - title: "Interactive visualization and effective data communication I"
-    date: "Week 11 (11/3)"
-    class: "11-class"
-    reading: "11-reading"
+  - title: "Managing Big Data, SQL and Non-SQL Languages, Google BigQuery"
+    date: "Week 10 (11/1)"
+    class: "10-class"
+    reading: "10-reading"
     assignment: ""
 
-  - title: "Veterans Day (No class)"
-    date: "Week 12 (11/10)"
-    class: ""
-    reading: ""
+  - title: "Interactive Visualization & Effective Data Communication I"
+    date: "Week 11 (11/8)"
+    class: "11-class"
+    reading: "11-reading"
     assignment: "11-hw4"
 
-  - title: "Interactive visualization and effective data communication II"
-    date: "Week 13 (11/17)"
+  - title: "Interactive Visualization and Effective Data Communication II"
+    date: "Week 12 (11/15)"
     class: "12-class"
     reading: "12-reading"
     assignment: ""
 
-  - title: "Thanksgiving Holiday"
-    date: "Week 14 (11/24)"
+  - title: "Final project workshop"
+    date: "Week 13 (11/22)"
+    class: "13-class"
+    reading: "13-reading"
+    assignment: "14-final"
+
+  - title: "NO CLASS - Thanksgiving Holiday"
+    date: "Week 14 (11/29)"
     class: ""
     reading: ""
     assignment: ""
 
-  - title: "Final project workshop: review progress"
-    date: "Week 15 (12/1)"
-    class: "13-class"
-    reading: "13-reading"
+  - title: "Final Project Due"
+    date: "Week 15 (12/6)"
+    class: ""
+    reading: ""
     assignment: ""
-
-  - title: "Final Project"
-    date: "Week 16 (12/8)"
-    class: "14-class"
-    reading: "14-reading"
-    assignment: "14-final"
 
