removed midterm due date from schedule, updated HW 3

--- a/website/data/schedule.yaml
+++ b/website/data/schedule.yaml
@@ -48,7 +48,7 @@ lessons:
     reading: "07-reading"
     assignment: ""
 
-  - title: "(Midterm Project due) High Performance Computing, Cloud Computing"
+  - title: "High Performance Computing, Cloud Computing"
     date: "Week 9 (10/25)"
     class: "09-class"
     reading: "09-reading"
