updated gitignore, removed some hidden files

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
       Department of Population and Public Health Sciences
     right:
       LICENSE <br>
-      View the source at GitHub.
+      View the [source at GitHub](https://github.com/USCbiostats/PM566).
       
 format:
   html:
